# PyPgAvro

./: .gitignore  README.md  TYPES.md  pyproject.toml
.github/workflows/: python-package.yml
pypgavro/: type_matches.py
pypgavro/test/: test_create_table.py
test/: test_create_table.py
