[tool.poetry]
name = "pypgavro"
version = "0.1.0"
description = "Convert Postgres tables to Avro files"
authors = ["Harsh Chauhan <hschauhan25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
psycopg2 = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

